# score-addon-cv

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_compvis.cpp  score_addon_compvis.hpp
.github/workflows/: builds.yaml  portability.yml
CV/: Geometry.hpp
CV/Cpu/: BlobSort.cpp  BlobSort.hpp  BlobStats.cpp  BlobStats.hpp  BlobsChain.hpp  Calibration.cpp  Calibration.hpp  CamShift.cpp  CamShift.hpp  Canny.cpp  Canny.hpp  CartoPol.hpp  ChessboardCorners.cpp  ChessboardCorners.hpp  Circularity.hpp  ConnectedComponents.hpp  Contours.cpp  Contours.hpp  CumulativeMean.hpp  Extrema.cpp  Extrema.hpp  FaceParts.hpp  FastCorners.cpp  FastCorners.hpp  FeatureMatch.cpp  FeatureMatch.hpp  FloodFill.cpp  FloodFill.hpp  FrameSub.hpp  GaussianBlur.cpp  GaussianBlur.hpp  GoodFeatures.cpp  GoodFeatures.hpp  Homography.hpp  HornSchunck.cpp  HornSchunck.hpp  HoughLines.cpp  HoughLines.hpp  HoughTransform.cpp  HoughTransform.hpp  (+27 more)
CV/Readback/: CentroidReadback.hpp  MomentsReadback.hpp  PointListReadback.hpp
CV/Shaders/Analysis/: Centroid.cs  Corners.cs  Covariance.cs  Histogram.cs  Hough.cs  MinMaxMean.cs  Moments.cs  Sum.cs
CV/Shaders/Filters/: Binedge.fs  ChromaKey.fs  DenseFlow.fs  FrameDiff.fs  Morphology.fs  Perspective.fs  Resize.fs  RunningAverage.fs  TemporalMean.fs  Threshold.fs  Undistort.fs
CV/Support/: Brief.hpp  Chessboard.hpp  EigenImage.hpp  Mahalanobis.hpp
CompVis/: CV.hpp  Contours.cpp  Contours.hpp  Contrast.cpp  Contrast.hpp  Detector.cpp  Detector.hpp  Geometry.hpp  YOLOv8-pose.cpp  YOLOv8-pose.hpp
tests/: ScoreTextureModel.hpp  TestImage.hpp  build_check.sh  run_standalone.sh  test_blobs.cpp  test_chessboard.cpp  test_contours.cpp  test_edges.cpp  test_features.cpp  test_floodblob.cpp  test_geometry.cpp  test_geometry_npoint.cpp  test_houghchain.cpp  test_hsflow.cpp  test_kalman.cpp  test_label.cpp  test_learn.cpp  test_lines.cpp  test_main_objects.cpp  test_match2.cpp  test_morphology.cpp  test_pointops.cpp  test_pointtrack.cpp  test_primitives.cpp  test_readbacks.cpp  test_temporal.cpp  test_tracking.cpp  test_valueops.cpp
